Stop flickering on chrome

--- a/color-namer.css
+++ b/color-namer.css
@@ -14,7 +14,7 @@ body {
     left: 0;
     background-color: #FFFFFF;
     z-index: 3;
-    width: 200px;
+    width: 235px;
     cursor: move;
 }
 
